<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.ntou.haohao.ntoudromflow.MainActivity">


    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/tablelayout">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="45dp"
                android:layout_height="fill_parent"
                android:text="@string/IP"
                android:padding="3dp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/SUM"
                android:padding="3dp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/IN"
                android:padding="3dp"
                android:gravity="center"
                android:textSize="12dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/OUT"
                android:padding="3dp"
                android:gravity="center"
                android:textSize="12dp"/>
        </TableRow>
    </TableLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/tablelayout"
        android:layout_above="@+id/end" />

    <TableLayout
        android:stretchColumns="*"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_settings"
                android:id="@+id/SETbutton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Refresh"
                android:id="@+id/REFRESHbutton" />

        </TableRow>

    </TableLayout>
</RelativeLayout>
