<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ntou.haohao.ntoudromflow.set">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterIP"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/IPtextview"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:paddingBottom="10dp"
        android:layout_below="@+id/IPtextview"
        android:id="@+id/IPlayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="140.121."
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="30dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/IPPicker1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="."
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textSize="30dp" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/IPPicker2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Flow_above"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:id="@+id/FLOWtextview"
        android:layout_below="@+id/IPlayout"
        android:gravity="center" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:paddingTop="5dp"
        android:layout_below="@+id/FLOWtextview"
        android:id="@+id/FLOWlayout">

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/WARNPicker"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Warning_me"
            android:paddingRight="5dp"
            android:paddingLeft="5dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Ok"
        android:id="@+id/OK"
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
